--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Dish Dash</string>
     <string name="dishdash">Dish \nDash</string>
     <string name="txt_lable">Text</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
